[tool.poetry]
name = "pytestproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest-ordering = "^0.6"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
pytest-rerunfailures = "14.0"
setuptools = "^80.9.0"
allure-pytest = "^2.16.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
